<resources>
    <string name="app_name">ToddsSyndromeTest</string>



    //new patient Details strings
    <string name="new_patient_details">New Patient Details</string>
    <string name="patient_details">Patient Details</string>
    <string name="name">Patient Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="migranes">Migraines</string>
    <string name="drugs">Hallucinogenic drugs</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="font_sens_regular">fonts/pt_sans_regular.ttf</string>
    <string name="font_mont_regular">fonts/Montserrat-Regular.ttf</string>
    <string name="dummy_message"></string>
    <string name="empty_message">No Diagnosis Result Available</string>
    <string name="empty_message_2">Click + for start taking test</string>
</resources>
